Fix img stretch in MovieCardSmall.js

--- a/src/components/element/MovieCardSmall.css
+++ b/src/components/element/MovieCardSmall.css
@@ -12,10 +12,12 @@
 .MovieCardSmall > div.img-section > img.with-poster {
     height: 15vmax;
     width: auto;
+    object-fit: contain;
 }
 .MovieCardSmall > div.img-section > img.no-poster {
     height: auto;
     width: 10vmax;
+    object-fit: contain;
 }
 
 .MovieCardSmall::after {
